added base exception handling